  + New TransformColors method
  + New ReplaceColor method
  + New Inverse method
  + New MakeOpaque method
  + New MakeGrayscale method
  + New AdjustBrightness method
  + New AdjustContrast method
  + New AdjustGamma method
- IconExtensions class:
  - ExtractBitmap/ExtractBitmaps: Fixing ArgumentNullException if the icon was created from a handle and
    keepOriginalFormat parameter was true.
  - Combine methods have been fixed for indexed bitmaps with specified transparent color
+ ImageExtensions class:
  + ConvertPixelFormat method:
    + Supporting every pixel formats, including Format16bppGrayScale and Format16bppArgb1555.
    + New backColor optional parameter: Specifies a background color for non-alpha pixel formats. From now on
      converting alpha bitmaps to non-alpha ones the color of the originally alpha pixels will not be necessarily
      black. Not fully transparent pixels are blended with the specified background color.
    + New alphaThreshold optional parameter: If the new pixel format has one bit alpha or is indexed, then specifies
      a threshold value for treating alpha pixels completely transparent. Alpha pixels, which are not treated
      transparent are blended with the backColor parameter.
    + New overloads for omitting palette and for using a custom quantizer and ditherer.
  * ToGrayscale method: Now supports every source pixel format.
  - EqualsByContent method:
    - Images with different raw format were considered different even if their raw content were the same. From now
      on images with different raw format can also be considered equal (as expected based on the documentation).
    - Images with the same stride size were considered different if the absolute value of their stride were
      different (a top-down image was compared to a bottom-up image).
  + New DrawInto methods: Similar to Graphics.DrawImage but supports every PixelFormat